<resources>
    <string name="app_name">DrawerNav Assignment</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_slideshow">Slideshow</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>

    <string name="nav_header_communicate">Communicate</string>

    <string name="fragment_home">Ini halaman Home</string>
    <string name="fragment_gallery">Ini halaman Gallery</string>
    <string name="fragment_slideshow">Ini halaman Slideshow</string>
    <string name="fragment_tools">Ini halaman Tools</string>

    <string name="nav_absence">Absensi</string>
    <string name="nav_grade">Nilai</string>
    <string name="nav_bills">Keuangan</string>
    <string name="nav_settings">Pengaturan</string>

    <string name="fragment_absence">Ini halaman Absensi</string>
    <string name="fragment_grade">Ini halaman Nilai</string>
    <string name="fragment_bill">Ini halaman Keuangan</string>
    <string name="fragment_settings">Ini halaman Pengaturan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>