<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_camera"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_images"
            android:title="@string/nav_gallery"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_projector"
            android:title="@string/nav_slideshow"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_hammer"
            android:title="@string/nav_tools"/>
    </group>

    <item android:title="@string/nav_header_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/nav_send"/>
        </menu>
    </item>

</menu>